fix: Prevent side menu hiding when horizontal scroll appears

--- a/packages/mantine/src/blocknoteStyles.css
+++ b/packages/mantine/src/blocknoteStyles.css
@@ -1,3 +1,4 @@
+.bn-editor { overflow-x: clip; overflow-y: visible; }
 @import url("@blocknote/react/style.css");
 
 /* Mantine base styles*/
